--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,12 @@ MANIFEST
 *.manifest
 *.spec
 
+# Project
 *.sqlite[\d]
 .idea/*
 adjuntos/*
+media/*
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
